--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,9 +18,9 @@ jobs:
     steps:
       - uses: "actions/checkout@v4"
 
+      - uses: "docker/setup-qemu-action@v3"
+
       - uses: "docker/setup-buildx-action@v3"
-        with:
-          platforms: "linux/amd64,linux/arm64"
 
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
@@ -44,6 +44,7 @@ jobs:
       - uses: "docker/build-push-action@v5"
         with:
           context: "."
+          platforms: "linux/amd64,linux/arm64"
           push: true
           tags: "${{ steps.docker-metadata.outputs.tags }}"
           labels: "${{ steps.docker-metadata.outputs.labels }}"
