--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,7 @@ jobs:
           tags: |
             # High priority ensures this used for image version
             type=sha,format=long,prefix=,priority=1001
+            type=raw,enable={{!is_default_branch}},value={{ base_ref || branch }}
             # Latest for main branch
             type=raw,enable={{is_default_branch}},priority=1,value=latest
 
