--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,7 +38,7 @@ jobs:
           tags: |
             # High priority ensures this used for image version
             type=sha,format=long,prefix=,priority=1001
-            type=raw,value={{ base_ref || branch }}
+            type=raw,enabled={{ base_ref }},value={{ base_ref }}
             # Latest for main branch
             type=raw,enable={{is_default_branch}},priority=1,value=latest
 
